have a nice day!

--- a/indexes/nsc1025/188.md
+++ b/indexes/nsc1025/188.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [杨宁：浙江广西福建连现大凶兆 上天急示警](../../pages/nsc1025/n13736894.md) 
+#### [田云：中共严控公民出境 国人应尽快脱离中共](../../pages/nsc1025/n13736314.md) 
+#### [王友群：与薄熙来有关的一些往事的回忆](../../pages/nsc1025/n13735160.md) 
+#### [杨宁：朝鲜通报疫情严重 再打击北京清零政策](../../pages/nsc1025/n13735992.md) 
+#### [周晓辉：公布感染者打疫苗情况 北京自行打脸](../../pages/nsc1025/n13736155.md) 
 #### [袁斌：中共为何掩盖删除长沙倒塌事故遇难者的名字？](../../pages/nsc1025/n13735204.md) 
 #### [【名家专栏】通货膨胀 美国人面对的艰难旅程](../../pages/nsc1025/n13734990.md) 
 #### [【名家专栏】制裁中共应从现在开始](../../pages/nsc1025/n13733855.md) 
@@ -25,11 +30,6 @@
 #### [古风：马云屡次躺枪与江派失势有关](../../pages/nsc1025/n13731131.md) 
 #### [周晓辉：五月中要清零 上海向习表忠层层加码](../../pages/nsc1025/n13730636.md) 
 #### [岳山：传韩正要李强下台 上海权斗不寻常](../../pages/nsc1025/n13730241.md) 
-#### [张菁：依托大数据的健康码带给人什么](../../pages/nsc1025/n13730595.md) 
-#### [袁斌：党媒提“斗争” 中共高层防疫政策不同调？](../../pages/nsc1025/n13730399.md) 
-#### [沈舟：俄乌战事胶着 最后谁能赢？](../../pages/nsc1025/n13729909.md) 
-#### [【名家专栏】四个邪恶政权的核武威胁](../../pages/nsc1025/n13729936.md) 
-#### [【名家专栏】马斯克收购推特对权力集团意味啥](../../pages/nsc1025/n13729521.md) 
 
 ---
 #### 第 [ [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) ] 页
