--- a/indexes/nsc1026/52.md
+++ b/indexes/nsc1026/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [【财经话题】美元天花板与美股的触底](../../pages/nsc1026/n13736495.md) 
 #### [【财经话题】美联储升息2码与道指大涨932点](../../pages/nsc1026/n13727377.md) 
 #### [古风：中国银行业已资不抵债 后果严重](../../pages/nsc1026/n13726111.md) 
 #### [【财经话题】债市预期美国经济衰退风险攀高](../../pages/nsc1026/n13698043.md) 
@@ -29,7 +30,6 @@
 #### [【谈股论金】解析Omicron疫情潜在的恐慌](../../pages/nsc1026/n13403704.md) 
 #### [【财经话题】长期的能源危机解除了吗？](../../pages/nsc1026/n13378041.md) 
 #### [【财经话题】通胀意外升温 美股将牛市反转？](../../pages/nsc1026/n13370659.md) 
-#### [王赫：中共开放债市 外资持疑](../../pages/nsc1026/n13366203.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
