--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [李正宽：法轮大法洪传与中华五千文明背后的深意](../../pages/nsc1035/n13736203.md) 
 #### [杨颖宇：法轮功洪传三十周年有感](../../pages/nsc1035/n13734884.md) 
 #### [吴吕南：不知五四 无论六四](../../pages/nsc1035/n13732297.md) 
 #### [郑愚山：我和“铁链女”的故事](../../pages/nsc1035/n13727327.md) 
@@ -29,7 +30,6 @@
 #### [李涵：贺岁片《聚会Ⅱ》，让我相信了以德报怨的力量](../../pages/nsc1035/n13530032.md) 
 #### [惠虎宇：影评——穿越生死的《沉默呼声》](../../pages/nsc1035/n13516514.md) 
 #### [刘正清：哭张青](../../pages/nsc1035/n13509328.md) 
-#### [何清涟：花谢有余芳，汝剑仍铿锵](../../pages/nsc1035/n13507378.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
