have a nice day!

--- a/indexes/nsc993/80.md
+++ b/indexes/nsc993/80.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】国人最怕的不是病毒，而是随时被洪水打翻](../../pages/nsc993/n13737687.md) 
+#### [“这是我们最后一代” 网民：何等绝望，何等悲壮！](../../pages/nsc993/n13737647.md) 
 #### [【网海拾贝】上海不再是文化高地，而是政治据点](../../pages/nsc993/n13735354.md) 
 #### [林清泉：在逃出魔掌的日子里](../../pages/nsc993/n13733918.md) 
 #### [南岛：魔都流浪记](../../pages/nsc993/n13735342.md) 
@@ -28,8 +30,6 @@
 #### [林一山：《时代革命》——香港最美丽的时光](../../pages/nsc993/n13717794.md) 
 #### [【网海拾贝】中国独步全球的“社会面清零”在演哪出](../../pages/nsc993/n13721688.md) 
 #### [袁斌：这个春天的上海，有多少血和泪](../../pages/nsc993/n13721662.md) 
-#### [【网海拾贝】中共利用疫情把中国彻底变成了警察国家](../../pages/nsc993/n13720045.md) 
-#### [华尔街白领：我如何从拥共到退党并修炼法轮功](../../pages/nsc993/n13719513.md) 
 
 ---
 #### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
