--- a/indexes/nsc1028/60.md
+++ b/indexes/nsc1028/60.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [惠虎宇：500年风云变幻 俄罗斯帝国荣光不再](../../pages/nsc1028/n13738652.md) 
 #### [【名家专栏】小心房地产泡沫破裂](../../pages/nsc1028/n13736895.md) 
 #### [林辉：鲁迅与一日人关系引猜疑 曾为日军辩护](../../pages/nsc1028/n13736182.md) 
 #### [林辉：不愿许广平工作 鲁迅协助救中共党员](../../pages/nsc1028/n13732075.md) 
@@ -29,7 +30,6 @@
 #### [王友群：中共表面胜利实际失败的一场战争](../../pages/nsc1028/n13643934.md) 
 #### [我们从小到大学到的历史哪些是假的（15）](../../pages/nsc1028/n13632791.md) 
 #### [我们从小到大学到的历史哪些是假的（14）](../../pages/nsc1028/n13630207.md) 
-#### [张菁：批《武训传》 有江青与陶行知的个人恩怨](../../pages/nsc1028/n13629055.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
