--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,8 @@
 ### 纪元评论：感悟随笔
 ---
+#### [项云：“清零”是夯实专政维稳工具和手段，病毒是借口和机会](../../pages/nsc1035/n13737954.md) 
+#### [禾雨：镌刻在心里的画](../../pages/nsc1035/n13737937.md) 
+#### [谢卫国：大法缘牵三十载](../../pages/nsc1035/n13737872.md) 
 #### [李正宽：法轮大法洪传与中华五千文明背后的深意](../../pages/nsc1035/n13736203.md) 
 #### [杨颖宇：法轮功洪传三十周年有感](../../pages/nsc1035/n13734884.md) 
 #### [吴吕南：不知五四 无论六四](../../pages/nsc1035/n13732297.md) 
@@ -27,9 +30,6 @@
 #### [颜纯钩：看《时代革命》百感交集 向导演致敬](../../pages/nsc1035/n13574843.md) 
 #### [颜纯钩﻿：一个反共斗士的心路历程](../../pages/nsc1035/n13553725.md) 
 #### [张菁：过年了，想起为修炼而遭难的许那们](../../pages/nsc1035/n13543871.md) 
-#### [李涵：贺岁片《聚会Ⅱ》，让我相信了以德报怨的力量](../../pages/nsc1035/n13530032.md) 
-#### [惠虎宇：影评——穿越生死的《沉默呼声》](../../pages/nsc1035/n13516514.md) 
-#### [刘正清：哭张青](../../pages/nsc1035/n13509328.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
