--- a/indexes/nsc993/80.md
+++ b/indexes/nsc993/80.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [面对入户消杀，一位上海老漫画家的难过和悲凉](../../pages/nsc993/n13737703.md) 
+#### [词二首：文革五十六周年祭—红卫兵的悲哀](../../pages/nsc993/n13738644.md) 
+#### [藏头诗：文革短镜头（十五首）](../../pages/nsc993/n13737993.md) 
 #### [【网海拾贝】国人最怕的不是病毒，而是随时被洪水打翻](../../pages/nsc993/n13737687.md) 
 #### [“这是我们最后一代” 网民：何等绝望，何等悲壮！](../../pages/nsc993/n13737647.md) 
 #### [【网海拾贝】上海不再是文化高地，而是政治据点](../../pages/nsc993/n13735354.md) 
@@ -27,9 +30,6 @@
 #### [南岛：爸爸死前问了妈妈三遍──“120什么时候到？”](../../pages/nsc993/n13722393.md) 
 #### [强制市民交钥匙锁宅门  河北迁安防疫无法无天](../../pages/nsc993/n13722388.md) 
 #### [康有然：从乌俄战争谈中共的“血洗台湾，统一中国”](../../pages/nsc993/n13722349.md) 
-#### [林一山：《时代革命》——香港最美丽的时光](../../pages/nsc993/n13717794.md) 
-#### [【网海拾贝】中国独步全球的“社会面清零”在演哪出](../../pages/nsc993/n13721688.md) 
-#### [袁斌：这个春天的上海，有多少血和泪](../../pages/nsc993/n13721662.md) 
 
 ---
 #### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
