have a nice day!

--- a/indexes/nsc1025/189.md
+++ b/indexes/nsc1025/189.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共一意孤行 世卫声明无济于事 ](../../pages/nsc1025/n13739907.md) 
+#### [周晓辉：中共老领导挺李克强 习仍掌握军权](../../pages/nsc1025/n13739868.md) 
+#### [王赫：美国运用签证政策对中共实施精准打击](../../pages/nsc1025/n13739474.md) 
+#### [钟原：习近平未上党媒 胡锡进大胆解读](../../pages/nsc1025/n13739454.md) 
+#### [王友群：反习势力严相逼 今夏或又“响惊雷”](../../pages/nsc1025/n13739442.md) 
 #### [郝平：李克强再扩权？中共或崩于内斗](../../pages/nsc1025/n13739371.md) 
 #### [钟原：中办通知防离退休干部“妄议中央”](../../pages/nsc1025/n13738566.md) 
 #### [沈舟：俄乌战争期间辽宁号出动成败笔](../../pages/nsc1025/n13737879.md) 
@@ -25,11 +30,6 @@
 #### [杨宁：浙江广西福建连现大凶兆 上天急示警](../../pages/nsc1025/n13736894.md) 
 #### [田云：中共严控公民出境 国人应尽快脱离中共](../../pages/nsc1025/n13736314.md) 
 #### [王友群：与薄熙来有关的一些往事的回忆](../../pages/nsc1025/n13735160.md) 
-#### [杨宁：朝鲜通报疫情严重 再打击北京清零政策](../../pages/nsc1025/n13735992.md) 
-#### [周晓辉：公布感染者打疫苗情况 北京自行打脸](../../pages/nsc1025/n13736155.md) 
-#### [袁斌：中共为何掩盖删除长沙倒塌事故遇难者的名字？](../../pages/nsc1025/n13735204.md) 
-#### [【名家专栏】通货膨胀 美国人面对的艰难旅程](../../pages/nsc1025/n13734990.md) 
-#### [【名家专栏】制裁中共应从现在开始](../../pages/nsc1025/n13733855.md) 
 
 ---
-#### 第 [ [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) ] 页
+#### 第 [ [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) ] 页
