--- a/indexes/nsc1028/60.md
+++ b/indexes/nsc1028/60.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：江泽民亲信黄菊给上海留下巨大祸患](../../pages/nsc1028/n13738097.md) 
 #### [【名家专栏】佛州立法要学生了解共产主义邪恶](../../pages/nsc1028/n13739214.md) 
 #### [林辉：否定传统文化 鲁迅为共产革命辩护](../../pages/nsc1028/n13738481.md) 
 #### [惠虎宇：500年风云变幻 俄罗斯帝国荣光不再](../../pages/nsc1028/n13738652.md) 
@@ -29,7 +30,6 @@
 #### [中共援助阿尔巴尼亚最多 却成了阿的“敌人”](../../pages/nsc1028/n13675049.md) 
 #### [王友群：中朝之间有鲜血凝成的友谊吗？](../../pages/nsc1028/n13660401.md) 
 #### [中共罪行录之七十四：“彭德怀反党集团”](../../pages/nsc1028/n13655741.md) 
-#### [王友群：中共表面胜利实际失败的一场战争](../../pages/nsc1028/n13643934.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
