--- a/indexes/nsc993/80.md
+++ b/indexes/nsc993/80.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [李文亮微博下，网民怒斥中共国是“黑白颠倒的社会”](../../pages/nsc993/n13739600.md) 
+#### [网友：为什么讨厌共产党？](../../pages/nsc993/n13739580.md) 
+#### [【网海拾贝】中共的制度劣势：集中力量办坏事和蠢事](../../pages/nsc993/n13739491.md) 
 #### [面对入户消杀，一位上海老漫画家的难过和悲凉](../../pages/nsc993/n13737703.md) 
 #### [词二首：文革五十六周年祭—红卫兵的悲哀](../../pages/nsc993/n13738644.md) 
 #### [藏头诗：文革短镜头（十五首）](../../pages/nsc993/n13737993.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】三千多条评论，为何一条都不敢亮出来？](../../pages/nsc993/n13723827.md) 
 #### [蔡桂华：人类需要清零中共](../../pages/nsc993/n13723298.md) 
 #### [【网海拾贝】上海官方的新冠死亡人数可靠吗？](../../pages/nsc993/n13722405.md) 
-#### [南岛：爸爸死前问了妈妈三遍──“120什么时候到？”](../../pages/nsc993/n13722393.md) 
-#### [强制市民交钥匙锁宅门  河北迁安防疫无法无天](../../pages/nsc993/n13722388.md) 
-#### [康有然：从乌俄战争谈中共的“血洗台湾，统一中国”](../../pages/nsc993/n13722349.md) 
 
 ---
 #### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
