have a nice day!

--- a/indexes/nsc1025/189.md
+++ b/indexes/nsc1025/189.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [杨威：中共急与美日对话 火药味浓](../../pages/nsc1025/n13740330.md) 
+#### [杨宁：美国会召开UFO听证会 对世人意味什么](../../pages/nsc1025/n13740963.md) 
+#### [王赫：中国的银行风险已经浮现](../../pages/nsc1025/n13740486.md) 
 #### [【名家专栏】中共一意孤行 世卫声明无济于事 ](../../pages/nsc1025/n13739907.md) 
 #### [周晓辉：中共老领导挺李克强 习仍掌握军权](../../pages/nsc1025/n13739868.md) 
 #### [王赫：美国运用签证政策对中共实施精准打击](../../pages/nsc1025/n13739474.md) 
@@ -27,9 +30,6 @@
 #### [钟原：党媒发李克强九千字讲话释何信号？](../../pages/nsc1025/n13737062.md) 
 #### [郝平：朝鲜疫情如海啸 中共临三大麻烦](../../pages/nsc1025/n13737052.md) 
 #### [【名家专栏】马斯克收购推特 拆除硅谷围墙](../../pages/nsc1025/n13736732.md) 
-#### [杨宁：浙江广西福建连现大凶兆 上天急示警](../../pages/nsc1025/n13736894.md) 
-#### [田云：中共严控公民出境 国人应尽快脱离中共](../../pages/nsc1025/n13736314.md) 
-#### [王友群：与薄熙来有关的一些往事的回忆](../../pages/nsc1025/n13735160.md) 
 
 ---
 #### 第 [ [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) ] 页
