have a nice day!

--- a/indexes/nsc1025/189.md
+++ b/indexes/nsc1025/189.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [岳山：王小洪操弄公安部 赵克志下场不妙？](../../pages/nsc1025/n13741523.md) 
+#### [王友群：法轮功功德无量 江泽民罪大恶极](../../pages/nsc1025/n13741673.md) 
+#### [郝平：习让党权留军权？习李斗为虚习江斗是实](../../pages/nsc1025/n13741788.md) 
 #### [【名家专栏】最极端的堕胎法案](../../pages/nsc1025/n13741602.md) 
 #### [王赫：习李关系与“二十大”鏖战](../../pages/nsc1025/n13741425.md) 
 #### [王友群：为什么要退出中共党、团、队？](../../pages/nsc1025/n13739453.md) 
@@ -27,9 +30,6 @@
 #### [唐青：右翼突围先锋官？马斯克崛起之谜](../../pages/nsc1025/n13738230.md) 
 #### [李明：全球疫情 祸起中共](../../pages/nsc1025/n13737987.md) 
 #### [郝平：习李陷拉锯战 著名“国师”罕见骑墙](../../pages/nsc1025/n13737977.md) 
-#### [梁文韬：警察治港下的类戒严](../../pages/nsc1025/n13737969.md) 
-#### [周晓辉：朝鲜这样应对疫情 反衬北京荒诞可笑](../../pages/nsc1025/n13737864.md) 
-#### [朱同：中共用核酸检测训练人民服从性？](../../pages/nsc1025/n13737928.md) 
 
 ---
 #### 第 [ [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) ] 页
