--- a/indexes/nsc993/80.md
+++ b/indexes/nsc993/80.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [为何美媒误称南加教会枪击案是大陆人攻击台湾人？](../../pages/nsc993/n13740366.md) 
 #### [界立建：政治迫害可耻 立即释放所有良心犯](../../pages/nsc993/n13741069.md) 
 #### [一七令▪封城清零大上海（三首）](../../pages/nsc993/n13741070.md) 
 #### [李文亮微博下，网民怒斥中共国是“黑白颠倒的社会”](../../pages/nsc993/n13739600.md) 
@@ -29,7 +30,6 @@
 #### [“太荒唐了，这个是二十一世纪的上海啊”](../../pages/nsc993/n13725520.md) 
 #### [关于上海防疫，一个中国人想问的四个问题](../../pages/nsc993/n13725367.md) 
 #### [郑纯清：“疫”出即“封”是为挡真相](../../pages/nsc993/n13724933.md) 
-#### [【网海拾贝】三千多条评论，为何一条都不敢亮出来？](../../pages/nsc993/n13723827.md) 
 
 ---
 #### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
