have a nice day!

--- a/indexes/nsc1025/189.md
+++ b/indexes/nsc1025/189.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】与中共有关联的美国候选人](../../pages/nsc1025/n13742857.md) 
+#### [周晓辉：专家录音透疫苗方舱真相 国人被愚弄](../../pages/nsc1025/n13742686.md) 
+#### [唐青：马斯克被逼上梁山 推特大战群雄](../../pages/nsc1025/n13742604.md) 
 #### [岳山：王小洪操弄公安部 赵克志下场不妙？](../../pages/nsc1025/n13741523.md) 
 #### [王友群：法轮功功德无量 江泽民罪大恶极](../../pages/nsc1025/n13741673.md) 
 #### [郝平：习让党权留军权？习李斗为虚习江斗是实](../../pages/nsc1025/n13741788.md) 
@@ -27,9 +30,6 @@
 #### [【纪元专栏】欲立法限制抗议权利？进步派政客需三思](../../pages/nsc1025/n13738599.md) 
 #### [岳山：习近平加码按住元老 二十大恐生意外？](../../pages/nsc1025/n13738445.md) 
 #### [【名家专栏】神韵辉煌：美妙壮观的体验 ](../../pages/nsc1025/n13738518.md) 
-#### [唐青：右翼突围先锋官？马斯克崛起之谜](../../pages/nsc1025/n13738230.md) 
-#### [李明：全球疫情 祸起中共](../../pages/nsc1025/n13737987.md) 
-#### [郝平：习李陷拉锯战 著名“国师”罕见骑墙](../../pages/nsc1025/n13737977.md) 
 
 ---
 #### 第 [ [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) ] 页
