--- a/indexes/nsc1028/60.md
+++ b/indexes/nsc1028/60.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之七十七：饥饿的北京](../../pages/nsc1028/n13742533.md) 
 #### [【名家专栏】马斯克与中共在太空的较量](../../pages/nsc1028/n13741595.md) 
 #### [王友群：江泽民亲信黄菊给上海留下巨大祸患](../../pages/nsc1028/n13738097.md) 
 #### [【名家专栏】佛州立法要学生了解共产主义邪恶](../../pages/nsc1028/n13739214.md) 
@@ -29,7 +30,6 @@
 #### [观雨堂主：从“原子弹与茶叶蛋”谈起](../../pages/nsc1028/n13677405.md) 
 #### [李宇明：中南海“为人民服务”标语背后的故事](../../pages/nsc1028/n13677266.md) 
 #### [中共援助阿尔巴尼亚最多 却成了阿的“敌人”](../../pages/nsc1028/n13675049.md) 
-#### [王友群：中朝之间有鲜血凝成的友谊吗？](../../pages/nsc1028/n13660401.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
