--- a/indexes/nsc993/80.md
+++ b/indexes/nsc993/80.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [祝君安：青玉案·红线问](../../pages/nsc993/n13743436.md) 
 #### [【网海拾贝】受上海封城拖累，长三角财政收入暴跌](../../pages/nsc993/n13742554.md) 
 #### [为何美媒误称南加教会枪击案是大陆人攻击台湾人？](../../pages/nsc993/n13740366.md) 
 #### [界立建：政治迫害可耻 立即释放所有良心犯](../../pages/nsc993/n13741069.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】长沙房屋倒塌跟建筑质量无关，你信吗？](../../pages/nsc993/n13726099.md) 
 #### [大陆作家：信任崩解，是上海疫情最大的后遗症](../../pages/nsc993/n13726083.md) 
 #### [“太荒唐了，这个是二十一世纪的上海啊”](../../pages/nsc993/n13725520.md) 
-#### [关于上海防疫，一个中国人想问的四个问题](../../pages/nsc993/n13725367.md) 
 
 ---
 #### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
