have a nice day!

--- a/indexes/nsc1025/190.md
+++ b/indexes/nsc1025/190.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共贸易政策将长期伤害中国经济](../../pages/nsc1025/n13744289.md) 
+#### [王赫：拜登政府对台政策一“进”一“退”之解读](../../pages/nsc1025/n13744611.md) 
+#### [周晓辉：韩正上海大管家在“谣言”中被烧烤](../../pages/nsc1025/n13744414.md) 
 #### [岳山：广东书记李希二十大仕途藏变数？](../../pages/nsc1025/n13744256.md) 
 #### [周晓辉：美日威慑升级 北京攻台或生变](../../pages/nsc1025/n13744398.md) 
 #### [张菁：中共清零政策让上海人抑郁症高发](../../pages/nsc1025/n13744389.md) 
@@ -27,9 +30,6 @@
 #### [王友群：为什么要退出中共党、团、队？](../../pages/nsc1025/n13739453.md) 
 #### [郝平：“习权李夺”扑朔迷离 背后江派暗流涌动](../../pages/nsc1025/n13741043.md) 
 #### [夏林：疫情后期 加拿大有人欢喜有人愁](../../pages/nsc1025/n13740969.md) 
-#### [谢田：中国会参与瓜分和掠夺俄罗斯吗？](../../pages/nsc1025/n13741034.md) 
-#### [【名家专栏】堕胎与马克思主义一脉相承](../../pages/nsc1025/n13740743.md) 
-#### [新州：上海人的砸锅声戳破了中共的人权谎言](../../pages/nsc1025/n13741026.md) 
 
 ---
 #### 第 [ [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) ] 页
