--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [小天：如何从疫情的牢笼中走出？](../../pages/nsc1035/n13744630.md) 
 #### [项云：“清零”是夯实专政维稳工具和手段，病毒是借口和机会](../../pages/nsc1035/n13737954.md) 
 #### [禾雨：镌刻在心里的画](../../pages/nsc1035/n13737937.md) 
 #### [谢卫国：大法缘牵三十载](../../pages/nsc1035/n13737872.md) 
@@ -29,7 +30,6 @@
 #### [影评：越来越明朗的希望——观贺岁片《聚会（2）》](../../pages/nsc1035/n13580867.md) 
 #### [颜纯钩：看《时代革命》百感交集 向导演致敬](../../pages/nsc1035/n13574843.md) 
 #### [颜纯钩﻿：一个反共斗士的心路历程](../../pages/nsc1035/n13553725.md) 
-#### [张菁：过年了，想起为修炼而遭难的许那们](../../pages/nsc1035/n13543871.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
