--- a/indexes/nsc993/81.md
+++ b/indexes/nsc993/81.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [市民：要不是在上海，我都信了上海解封了](../../pages/nsc993/n13744901.md) 
 #### [南岛：“这个世界真的是回不去了”](../../pages/nsc993/n13744880.md) 
 #### [李斐：香港仔](../../pages/nsc993/n13744441.md) 
 #### [为什么上海赚黑心钱的乱象这么多？](../../pages/nsc993/n13743981.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】现在有三个迥然不同的上海](../../pages/nsc993/n13728664.md) 
 #### [南岛：代价](../../pages/nsc993/n13728623.md) 
 #### [【网海拾贝】中共跟外界完全是两套系统，没有共通处](../../pages/nsc993/n13726952.md) 
-#### [南岛：这是人间地狱](../../pages/nsc993/n13726950.md) 
 
 ---
-#### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
+#### 第 [ [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) ] 页
