--- a/indexes/nsc993/81.md
+++ b/indexes/nsc993/81.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [筑梦华裔青年Jane Jin 谈广告创意之用](../../pages/nsc993/n13743806.md) 
+#### [新唐人华人美声声乐大赛 填补音乐界空白](../../pages/nsc993/n13746123.md) 
+#### [企业负责人：一刀切下，上海微小企业有多难？](../../pages/nsc993/n13745707.md) 
 #### [市民：要不是在上海，我都信了上海解封了](../../pages/nsc993/n13744901.md) 
 #### [南岛：“这个世界真的是回不去了”](../../pages/nsc993/n13744880.md) 
 #### [李斐：香港仔](../../pages/nsc993/n13744441.md) 
@@ -27,9 +30,6 @@
 #### [黄之鸣：上海疫情自述](../../pages/nsc993/n13731186.md) 
 #### [【网海拾贝】70000家外企正重估在上海的明天](../../pages/nsc993/n13730549.md) 
 #### [祝君安：浣溪沙‧境外势力](../../pages/nsc993/n13729451.md) 
-#### [【网海拾贝】现在有三个迥然不同的上海](../../pages/nsc993/n13728664.md) 
-#### [南岛：代价](../../pages/nsc993/n13728623.md) 
-#### [【网海拾贝】中共跟外界完全是两套系统，没有共通处](../../pages/nsc993/n13726952.md) 
 
 ---
 #### 第 [ [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) ] 页
