--- a/indexes/nsc1025/190.md
+++ b/indexes/nsc1025/190.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [岳山：“红卫兵外交”站队 王毅继任者生变？](../../pages/nsc1025/n13746454.md) 
+#### [林辉：麻雀清零后果严重 为其喊冤科学家遭迫害](../../pages/nsc1025/n13746900.md) 
+#### [沈舟：西太平洋激烈对抗 中共海空战力尴尬](../../pages/nsc1025/n13746437.md) 
+#### [王赫：拜登政府针对中共战略应更明智](../../pages/nsc1025/n13746434.md) 
+#### [周晓辉：李克强重磅讲话被否定意味什么](../../pages/nsc1025/n13746135.md) 
+#### [夏林：加拿大禁华为 迟交的功课](../../pages/nsc1025/n13746125.md) 
+#### [谢田：印太的三国演义、四方围堵和三个框架](../../pages/nsc1025/n13746113.md) 
 #### [【纪元专栏】安省大选 各党对教育承诺未达标](../../pages/nsc1025/n13746119.md) 
 #### [【名家专栏】传统婚姻确实是最好的选择](../../pages/nsc1025/n13745927.md) 
 #### [【有冇搞错】UN人权专员到访“波将金村”](../../pages/nsc1025/n13745359.md) 
@@ -23,13 +30,6 @@
 #### [沈舟：中共军队真要在西太平洋1打3？](../../pages/nsc1025/n13743214.md) 
 #### [乾元：从层流到紊流——中共会被哪棵稻草压垮](../../pages/nsc1025/n13743309.md) 
 #### [王赫：三次退党大潮及其历史意义](../../pages/nsc1025/n13743236.md) 
-#### [郝平：毕业生最强失业风暴 中共遭三大冲击](../../pages/nsc1025/n13743057.md) 
-#### [【名家专栏】与中共有关联的美国候选人](../../pages/nsc1025/n13742857.md) 
-#### [周晓辉：专家录音透疫苗方舱真相 国人被愚弄](../../pages/nsc1025/n13742686.md) 
-#### [唐青：马斯克被逼上梁山 推特大战群雄](../../pages/nsc1025/n13742604.md) 
-#### [岳山：王小洪操弄公安部 赵克志下场不妙？](../../pages/nsc1025/n13741523.md) 
-#### [王友群：法轮功功德无量 江泽民罪大恶极](../../pages/nsc1025/n13741673.md) 
-#### [郝平：习让党权留军权？习李斗为虚习江斗是实](../../pages/nsc1025/n13741788.md) 
 
 ---
 #### 第 [ [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) ] 页
