have a nice day!

--- a/indexes/nsc1025/190.md
+++ b/indexes/nsc1025/190.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共新冠清零政策损害美国企业](../../pages/nsc1025/n13747458.md) 
+#### [周晓辉：曝教材插画问题 意在淡化李克强讲话](../../pages/nsc1025/n13747353.md) 
+#### [王友群：习近平在海外遭遇的异议声](../../pages/nsc1025/n13747154.md) 
+#### [郝平：习规李不随？十万人大会释放四大信号](../../pages/nsc1025/n13746989.md) 
+#### [【名家专栏】2022年阵亡将士纪念日感怀](../../pages/nsc1025/n13746796.md) 
 #### [岳山：“红卫兵外交”站队 王毅继任者生变？](../../pages/nsc1025/n13746454.md) 
 #### [林辉：麻雀清零后果严重 为其喊冤科学家遭迫害](../../pages/nsc1025/n13746900.md) 
 #### [沈舟：西太平洋激烈对抗 中共海空战力尴尬](../../pages/nsc1025/n13746437.md) 
@@ -25,11 +30,6 @@
 #### [【名家专栏】美国东盟强化合作 对抗中共](../../pages/nsc1025/n13743580.md) 
 #### [何清涟：美国左派与马克思主义亲缘密切](../../pages/nsc1025/n13743745.md) 
 #### [颜丹：从北京朴石医学被查 看核酸检测骗局](../../pages/nsc1025/n13743692.md) 
-#### [觅真： 最近案例证明中共迫害法轮功仍特别严重](../../pages/nsc1025/n13743417.md) 
-#### [陆客：近两月的事件提醒我们──共产党是外来的](../../pages/nsc1025/n13743326.md) 
-#### [沈舟：中共军队真要在西太平洋1打3？](../../pages/nsc1025/n13743214.md) 
-#### [乾元：从层流到紊流——中共会被哪棵稻草压垮](../../pages/nsc1025/n13743309.md) 
-#### [王赫：三次退党大潮及其历史意义](../../pages/nsc1025/n13743236.md) 
 
 ---
 #### 第 [ [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) ] 页
