--- a/indexes/nsc993/81.md
+++ b/indexes/nsc993/81.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】“世界人民都知道”病根，就是没人敢说](../../pages/nsc993/n13747347.md) 
+#### [网民：又要封城又要稳经济，弄着玩呢？](../../pages/nsc993/n13747327.md) 
 #### [市民：疫情防控好，北京真的做到了？](../../pages/nsc993/n13746694.md) 
 #### [【网海拾贝】上海封城是一部世界滑稽戏](../../pages/nsc993/n13746605.md) 
 #### [吐为快：红朝说不](../../pages/nsc993/n13746172.md) 
@@ -28,8 +30,6 @@
 #### [南岛：魔都流浪记](../../pages/nsc993/n13735342.md) 
 #### [网友讥讽中共封杀谭德塞讲话是“笑料”](../../pages/nsc993/n13735319.md) 
 #### [【网海拾贝】千金万金比不得安睡一晚](../../pages/nsc993/n13731924.md) 
-#### [上海法学教授：“一人阳性、全楼转运” 违法](../../pages/nsc993/n13731029.md) 
-#### [安德森：饥饿塔](../../pages/nsc993/n13731189.md) 
 
 ---
 #### 第 [ [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) ] 页
