have a nice day!

--- a/indexes/nsc1025/191.md
+++ b/indexes/nsc1025/191.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [乾元：三十三年来又见学生运动](../../pages/nsc1025/n13748168.md) 
+#### [周晓辉：封杀朝鲜解封消息 北京怕民众比较](../../pages/nsc1025/n13748161.md) 
+#### [李正宽：极端清零的“铁链”锁住多少人？](../../pages/nsc1025/n13748159.md) 
+#### [唐青：习李内外危机难解 拜登逢百年机遇](../../pages/nsc1025/n13748107.md) 
+#### [【名家专栏】加国及世界应关闭中共离岸研究中心](../../pages/nsc1025/n13748012.md) 
 #### [国家安全新领域：美国农地与中国粮食需求](../../pages/nsc1025/n13747799.md) 
 #### [钟原：中共政治局会议不提“清零”有蹊跷](../../pages/nsc1025/n13747573.md) 
 #### [【名家专栏】中共新冠清零政策损害美国企业](../../pages/nsc1025/n13747458.md) 
@@ -25,11 +30,6 @@
 #### [岳山：广东书记李希二十大仕途藏变数？](../../pages/nsc1025/n13744256.md) 
 #### [周晓辉：美日威慑升级 北京攻台或生变](../../pages/nsc1025/n13744398.md) 
 #### [张菁：中共清零政策让上海人抑郁症高发](../../pages/nsc1025/n13744389.md) 
-#### [【纪元专栏】加拿大劳工短缺已达灾难程度](../../pages/nsc1025/n13738600.md) 
-#### [石铭：残酷迫害法轮功的河北省中共当局](../../pages/nsc1025/n13744150.md) 
-#### [杨威：13国重塑印太政治经济版图](../../pages/nsc1025/n13743953.md) 
-#### [王友群：习近平保二十大“三连任”的五举措](../../pages/nsc1025/n13743840.md) 
-#### [【名家专栏】美国东盟强化合作 对抗中共](../../pages/nsc1025/n13743580.md) 
 
 ---
-#### 第 [ [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) ] 页
+#### 第 [ [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) ] 页
