--- a/indexes/nsc993/81.md
+++ b/indexes/nsc993/81.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [三个故事，说尽上海癌症患者封城下的无助](../../pages/nsc993/n13749222.md) 
+#### [【网海拾贝】大批军人撤离上海，显出大白的原形](../../pages/nsc993/n13749184.md) 
+#### [网民斥常态化核酸检测自费：吃相越来越难看了](../../pages/nsc993/n13749170.md) 
 #### [【网海拾贝】“世界人民都知道”病根，就是没人敢说](../../pages/nsc993/n13747347.md) 
 #### [网民：又要封城又要稳经济，弄着玩呢？](../../pages/nsc993/n13747327.md) 
 #### [市民：疫情防控好，北京真的做到了？](../../pages/nsc993/n13746694.md) 
@@ -27,9 +30,6 @@
 #### [“这是我们最后一代” 网民：何等绝望，何等悲壮！](../../pages/nsc993/n13737647.md) 
 #### [【网海拾贝】上海不再是文化高地，而是政治据点](../../pages/nsc993/n13735354.md) 
 #### [林清泉：在逃出魔掌的日子里](../../pages/nsc993/n13733918.md) 
-#### [南岛：魔都流浪记](../../pages/nsc993/n13735342.md) 
-#### [网友讥讽中共封杀谭德塞讲话是“笑料”](../../pages/nsc993/n13735319.md) 
-#### [【网海拾贝】千金万金比不得安睡一晚](../../pages/nsc993/n13731924.md) 
 
 ---
 #### 第 [ [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) ] 页
