--- a/indexes/nsc993/81.md
+++ b/indexes/nsc993/81.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [王丹：纪念“六四”三十三周年的公开信](../../pages/nsc993/n13750161.md) 
+#### [吴绍平律师：抗疫，抗议](../../pages/nsc993/n13750135.md) 
 #### [三个故事，说尽上海癌症患者封城下的无助](../../pages/nsc993/n13749222.md) 
 #### [【网海拾贝】大批军人撤离上海，显出大白的原形](../../pages/nsc993/n13749184.md) 
 #### [网民斥常态化核酸检测自费：吃相越来越难看了](../../pages/nsc993/n13749170.md) 
@@ -28,8 +30,6 @@
 #### [藏头诗：文革短镜头（十五首）](../../pages/nsc993/n13737993.md) 
 #### [【网海拾贝】国人最怕的不是病毒，而是随时被洪水打翻](../../pages/nsc993/n13737687.md) 
 #### [“这是我们最后一代” 网民：何等绝望，何等悲壮！](../../pages/nsc993/n13737647.md) 
-#### [【网海拾贝】上海不再是文化高地，而是政治据点](../../pages/nsc993/n13735354.md) 
-#### [林清泉：在逃出魔掌的日子里](../../pages/nsc993/n13733918.md) 
 
 ---
 #### 第 [ [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) ] 页
