--- a/indexes/nsc1026/53.md
+++ b/indexes/nsc1026/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [吴惠林：正念因应通货膨胀](../../pages/nsc1026/n13750350.md) 
 #### [陈思敏：中概股退市风暴 中共稳得住吗](../../pages/nsc1026/n13738978.md) 
 #### [【财经话题】美元天花板与美股的触底](../../pages/nsc1026/n13736495.md) 
 #### [【财经话题】美联储升息2码与道指大涨932点](../../pages/nsc1026/n13727377.md) 
@@ -29,7 +30,6 @@
 #### [【谈股论金】再谈暴涨暴跌的比特币](../../pages/nsc1026/n13428036.md) 
 #### [【美股瞭望】1920年代美股大行情会重现吗？](../../pages/nsc1026/n13425425.md) 
 #### [【谈股论金】解析Omicron疫情潜在的恐慌](../../pages/nsc1026/n13403704.md) 
-#### [【财经话题】长期的能源危机解除了吗？](../../pages/nsc1026/n13378041.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
