have a nice day!

--- a/indexes/nsc993/81.md
+++ b/indexes/nsc993/81.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】经济被清零掏空后，中国人只会喝西北风了](../../pages/nsc993/n13750791.md) 
 #### [王丹：纪念“六四”三十三周年的公开信](../../pages/nsc993/n13750161.md) 
 #### [吴绍平律师：抗疫，抗议](../../pages/nsc993/n13750135.md) 
 #### [三个故事，说尽上海癌症患者封城下的无助](../../pages/nsc993/n13749222.md) 
@@ -29,7 +30,6 @@
 #### [词二首：文革五十六周年祭—红卫兵的悲哀](../../pages/nsc993/n13738644.md) 
 #### [藏头诗：文革短镜头（十五首）](../../pages/nsc993/n13737993.md) 
 #### [【网海拾贝】国人最怕的不是病毒，而是随时被洪水打翻](../../pages/nsc993/n13737687.md) 
-#### [“这是我们最后一代” 网民：何等绝望，何等悲壮！](../../pages/nsc993/n13737647.md) 
 
 ---
 #### 第 [ [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) ] 页
