have a nice day!

--- a/indexes/nsc1025/192.md
+++ b/indexes/nsc1025/192.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [杨宁：不见习李批示 官媒淡化四川强震有因](../../pages/nsc1025/n13751790.md) 
 #### [王赫：美台贸易倡议应导向FTA或BTA](../../pages/nsc1025/n13751254.md) 
 #### [谢田：拜登对付通胀三策为何难以奏效?](../../pages/nsc1025/n13751205.md) 
 #### [何良懋：美寄望中共自我完善是一厢情愿](../../pages/nsc1025/n13751259.md) 
@@ -29,7 +30,6 @@
 #### [周晓辉：封杀朝鲜解封消息 北京怕民众比较](../../pages/nsc1025/n13748161.md) 
 #### [李正宽：极端清零的“铁链”锁住多少人？](../../pages/nsc1025/n13748159.md) 
 #### [唐青：习李内外危机难解 拜登逢百年机遇](../../pages/nsc1025/n13748107.md) 
-#### [【名家专栏】加国及世界应关闭中共离岸研究中心](../../pages/nsc1025/n13748012.md) 
 
 ---
-#### 第 [ [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) ] 页
+#### 第 [ [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) ] 页
