--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [楚一丁：端午戏言——假如屈原和孔子活在当代](../../pages/nsc1028/n13751814.md) 
 #### [王友群：原中共上将房峰辉沦为阶下囚之谜](../../pages/nsc1028/n13746271.md) 
 #### [中共罪行录之七十七：饥饿的北京](../../pages/nsc1028/n13742533.md) 
 #### [【名家专栏】马斯克与中共在太空的较量](../../pages/nsc1028/n13741595.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之七十五：叛徒、内奸、工贼刘少奇](../../pages/nsc1028/n13688599.md) 
 #### [张菁：西安政变“功臣”刘鼎被中共整的很惨](../../pages/nsc1028/n13679371.md) 
 #### [观雨堂主：从“原子弹与茶叶蛋”谈起](../../pages/nsc1028/n13677405.md) 
-#### [李宇明：中南海“为人民服务”标语背后的故事](../../pages/nsc1028/n13677266.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
