--- a/indexes/nsc993/81.md
+++ b/indexes/nsc993/81.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [六四周年 媒体人：烛光不会灭 历史不会忘](../../pages/nsc993/n13751264.md) 
+#### [吐为快：端午祭六四（外一首）](../../pages/nsc993/n13751218.md) 
+#### [网民：以前的上海再也回不来了](../../pages/nsc993/n13750818.md) 
 #### [【网海拾贝】经济被清零掏空后，中国人只会喝西北风了](../../pages/nsc993/n13750791.md) 
 #### [王丹：纪念“六四”三十三周年的公开信](../../pages/nsc993/n13750161.md) 
 #### [吴绍平律师：抗疫，抗议](../../pages/nsc993/n13750135.md) 
@@ -27,9 +30,6 @@
 #### [网友：为什么讨厌共产党？](../../pages/nsc993/n13739580.md) 
 #### [【网海拾贝】中共的制度劣势：集中力量办坏事和蠢事](../../pages/nsc993/n13739491.md) 
 #### [面对入户消杀，一位上海老漫画家的难过和悲凉](../../pages/nsc993/n13737703.md) 
-#### [词二首：文革五十六周年祭—红卫兵的悲哀](../../pages/nsc993/n13738644.md) 
-#### [藏头诗：文革短镜头（十五首）](../../pages/nsc993/n13737993.md) 
-#### [【网海拾贝】国人最怕的不是病毒，而是随时被洪水打翻](../../pages/nsc993/n13737687.md) 
 
 ---
 #### 第 [ [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) ] 页
