have a nice day!

--- a/indexes/nsc993/81.md
+++ b/indexes/nsc993/81.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】2022年度最大黑色幽默和魔幻现实](../../pages/nsc993/n13752233.md) 
+#### [接种疫苗后确诊1型糖尿病，600多家长求救](../../pages/nsc993/n13752221.md) 
+#### [接海外退党义工电话 欲报警的他退出中共](../../pages/nsc993/n13750442.md) 
 #### [六四周年 媒体人：烛光不会灭 历史不会忘](../../pages/nsc993/n13751264.md) 
 #### [吐为快：端午祭六四（外一首）](../../pages/nsc993/n13751218.md) 
 #### [网民：以前的上海再也回不来了](../../pages/nsc993/n13750818.md) 
@@ -27,9 +30,6 @@
 #### [界立建：政治迫害可耻 立即释放所有良心犯](../../pages/nsc993/n13741069.md) 
 #### [一七令▪封城清零大上海（三首）](../../pages/nsc993/n13741070.md) 
 #### [李文亮微博下，网民怒斥中共国是“黑白颠倒的社会”](../../pages/nsc993/n13739600.md) 
-#### [网友：为什么讨厌共产党？](../../pages/nsc993/n13739580.md) 
-#### [【网海拾贝】中共的制度劣势：集中力量办坏事和蠢事](../../pages/nsc993/n13739491.md) 
-#### [面对入户消杀，一位上海老漫画家的难过和悲凉](../../pages/nsc993/n13737703.md) 
 
 ---
 #### 第 [ [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) ] 页
