--- a/indexes/nsc1025/192.md
+++ b/indexes/nsc1025/192.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [颜丹：中共鼓吹“上海回来了”是自欺欺人](../../pages/nsc1025/n13752347.md) 
+#### [王赫：日韩力推“经济安保” 剑指中共](../../pages/nsc1025/n13752170.md) 
+#### [【名家专栏】中共欲控制“云” 掌握敏感数据](../../pages/nsc1025/n13751647.md) 
 #### [杨宁：不见习李批示 官媒淡化四川强震有因](../../pages/nsc1025/n13751790.md) 
 #### [王赫：美台贸易倡议应导向FTA或BTA](../../pages/nsc1025/n13751254.md) 
 #### [谢田：拜登对付通胀三策为何难以奏效?](../../pages/nsc1025/n13751205.md) 
@@ -27,9 +30,6 @@
 #### [王友群：当今中国最核心的问题是什么？](../../pages/nsc1025/n13747599.md) 
 #### [郝平：中共政治局集体学习为何“跑题”了？](../../pages/nsc1025/n13748191.md) 
 #### [乾元：三十三年来又见学生运动](../../pages/nsc1025/n13748168.md) 
-#### [周晓辉：封杀朝鲜解封消息 北京怕民众比较](../../pages/nsc1025/n13748161.md) 
-#### [李正宽：极端清零的“铁链”锁住多少人？](../../pages/nsc1025/n13748159.md) 
-#### [唐青：习李内外危机难解 拜登逢百年机遇](../../pages/nsc1025/n13748107.md) 
 
 ---
 #### 第 [ [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) ] 页
