have a nice day!

--- a/indexes/nsc993/81.md
+++ b/indexes/nsc993/81.md
@@ -1,5 +1,11 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】六四天安门有没有死人？在场学生说肯定有](../../pages/nsc993/n13753395.md) 
+#### [林泉：六四屠城三十三周年祭](../../pages/nsc993/n13753318.md) 
+#### [李仪莲：真相电话传福音 有缘人不负苦劝终三退](../../pages/nsc993/n13753255.md) 
+#### [吕千荣：点燃蜡烛，今夜我为天使们守灵](../../pages/nsc993/n13753239.md) 
+#### [长风：锤镰伤天论](../../pages/nsc993/n13753220.md) 
+#### [东方慧：于无声处听惊雷——“这是我们最后一代”](../../pages/nsc993/n13753047.md) 
 #### [【网海拾贝】2022年度最大黑色幽默和魔幻现实](../../pages/nsc993/n13752233.md) 
 #### [接种疫苗后确诊1型糖尿病，600多家长求救](../../pages/nsc993/n13752221.md) 
 #### [接海外退党义工电话 欲报警的他退出中共](../../pages/nsc993/n13750442.md) 
@@ -24,12 +30,6 @@
 #### [南岛：“这个世界真的是回不去了”](../../pages/nsc993/n13744880.md) 
 #### [李斐：香港仔](../../pages/nsc993/n13744441.md) 
 #### [为什么上海赚黑心钱的乱象这么多？](../../pages/nsc993/n13743981.md) 
-#### [祝君安：青玉案·红线问](../../pages/nsc993/n13743436.md) 
-#### [【网海拾贝】受上海封城拖累，长三角财政收入暴跌](../../pages/nsc993/n13742554.md) 
-#### [为何美媒误称南加教会枪击案是大陆人攻击台湾人？](../../pages/nsc993/n13740366.md) 
-#### [界立建：政治迫害可耻 立即释放所有良心犯](../../pages/nsc993/n13741069.md) 
-#### [一七令▪封城清零大上海（三首）](../../pages/nsc993/n13741070.md) 
-#### [李文亮微博下，网民怒斥中共国是“黑白颠倒的社会”](../../pages/nsc993/n13739600.md) 
 
 ---
 #### 第 [ [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) ] 页
