--- a/indexes/nsc993/81.md
+++ b/indexes/nsc993/81.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [诸葛高参：中国梦不是超越美国](../../pages/nsc993/n13753666.md) 
 #### [【网海拾贝】六四天安门有没有死人？在场学生说肯定有](../../pages/nsc993/n13753395.md) 
 #### [林泉：六四屠城三十三周年祭](../../pages/nsc993/n13753318.md) 
 #### [李仪莲：真相电话传福音 有缘人不负苦劝终三退](../../pages/nsc993/n13753255.md) 
@@ -29,7 +30,6 @@
 #### [市民：要不是在上海，我都信了上海解封了](../../pages/nsc993/n13744901.md) 
 #### [南岛：“这个世界真的是回不去了”](../../pages/nsc993/n13744880.md) 
 #### [李斐：香港仔](../../pages/nsc993/n13744441.md) 
-#### [为什么上海赚黑心钱的乱象这么多？](../../pages/nsc993/n13743981.md) 
 
 ---
 #### 第 [ [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) ] 页
