--- a/indexes/nsc1025/192.md
+++ b/indexes/nsc1025/192.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [颜丹： 中共当下查“骗保” 忌惮民心不得已](../../pages/nsc1025/n13755172.md) 
+#### [【名家专栏】伊隆‧马斯克在学川普？（II）](../../pages/nsc1025/n13754754.md) 
+#### [王赫：仅靠军队习近平难以三连任](../../pages/nsc1025/n13754699.md) 
+#### [杨威：中共南太平洋失利 改挖俄国墙角](../../pages/nsc1025/n13754489.md) 
+#### [周晓辉：政策放开后仍现窘境 李克强回天乏力](../../pages/nsc1025/n13754398.md) 
 #### [李明：全球疫情 天警世人](../../pages/nsc1025/n13754348.md) 
 #### [岳山：中共外交人事动向吊诡 涉内斗和备战？](../../pages/nsc1025/n13754010.md) 
 #### [石铭：受迫害民众祈盼着迫害早日结束](../../pages/nsc1025/n13754063.md) 
@@ -25,11 +30,6 @@
 #### [谢田：拜登对付通胀三策为何难以奏效?](../../pages/nsc1025/n13751205.md) 
 #### [何良懋：美寄望中共自我完善是一厢情愿](../../pages/nsc1025/n13751259.md) 
 #### [周晓辉：甩锅居委会 上海官员不愿担责的背后](../../pages/nsc1025/n13751114.md) 
-#### [张菁：十五分钟核酸采样圈 劳民伤财怨声载道](../../pages/nsc1025/n13751110.md) 
-#### [【有冇搞错】习李矛盾激化难以避免](../../pages/nsc1025/n13750461.md) 
-#### [【名家专栏】中国现在值得投资吗？](../../pages/nsc1025/n13750210.md) 
-#### [陈思敏：人教版插图设计师背后关系网有多大？](../../pages/nsc1025/n13750804.md) 
-#### [袁斌：上海否认封城——新一幕的掩耳盗铃](../../pages/nsc1025/n13750763.md) 
 
 ---
 #### 第 [ [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) ] 页
